Update and rename mianci.yml to main_ci_jobs.yml

--- a/.github/workflows/main_ci_jobs.yml
+++ b/.github/workflows/main_ci_jobs.yml
@@ -7,23 +7,31 @@ on:
 
 jobs:
  sast_scan:
-   name: run bandit scan
+   name: Run Bandit Scan
    runs-on: ubuntu-latest
 
    steps:
    - name: Checkout code
      uses: actions/checkout@v2
-     
-   - name: Set uo Python
+
+   - name: Set up Python
      uses: actions/setup-python@v2
-     with: 
+     with:
        python-version: 3.8
 
    - name: Install Bandit
      run: pip install bandit
 
    - name: Run Bandit Scan
-     run: bandit -r .
+     run: bandit -ll -ii -r . -f json -o bandit-report.json
+
+   - name: Upload Artifact
+     uses: actions/upload-artifact@v3
+     if: always()
+     with:
+      name: bandit-findings
+      path: bandit-report.json
+
    
   
     
